workspace = { members = ["vmkub"] }
[package]
name = "vm-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["cargo"] }
expectrl = "0.7.1"
kademlia_dht = { path = "../dht/" }
