[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dialoguer = "0.11.0"
io = "0.0.2"
ssh = "0.1.4"
ssh2 = "0.9.4"
kademlia_dht = { path = "../../dht/" }
console = "0.15.8"
